<resources>
    <string name="corecapture_dc">Core Capture Data Centre</string>
    <string name="corecapture_environment">Core Capture Environment</string>
    <string name="corecapture_environment_summary">Enter Your Core Capture Environment</string>
    <string name="corecapture_export_type">Core Capture Export Type</string>
    <string name="corecapture_export_type_summary">Enter Your Core Capture Export Type</string>
    <string name="corecapture_export_name">Core Capture Export Profile Name</string>
    <string name="corecapture_export_name_summary">Enter Your Core Capture Export Profile Name</string>
    <string name="corecapture_IA_server">Captiva Server</string>
    <string name="corecapture_IA_server_summary">Enter Your Captiva Server Connection Name</string>
    <string name="corecapture_IA_catpureflow">Captiva CaptureFlow</string>
    <string name="corecapture_IA_catpureflow_summary">Enter Your Captiva CaptureFlow Name</string>
    <string name="corecapture_profiles">Core Capture Profiles</string>
    <string name="corecapture_CAPTURE_PROFILE">Capture Profile</string>
    <string name="corecapture_CAPTURE_PROFILE_TITLE">Core Capture Capture Profile Name</string>
    <string name="corecapture_CAPTURE_PROFILE_SUMMARY">Enter your Core Capture Capture Profile Name</string>
    <string name="corecapture_RECOGNITION_PROJECT">Recognition Project</string>
    <string name="corecapture_RECOGNITION_PROJECT_TITLE">Core Capture Recognition Project Name</string>
    <string name="corecapture_RECOGNITION_PROJECT_SUMMARY">Enter your Core Capture Recognition Project Name</string>
    <string name="licenseKey">LICE036-S0PN-5110</string>
    <string name="applicationId">APP9733-S507-6772</string>
    <string name="corecapture_USER">Core Capture User</string>
    <string name="corecapture_USER_TITLE">Your Core Capture Username</string>
    <string name="corecapture_USER_SUMMARY">Enter your Core Capture Username</string>
    <string name="corecapture_PASSWORD">Core Capture Password</string>
    <string name="corecapture_PASSWORD_TITLE">Your Core Capture Password</string>
    <string name="corecapture_PASSWORD_SUMMARY">Enter your Core Capture Password</string>
    <string name="corecapture_URL">Core Capture URL</string>
    <string name="corecapture_URL_TITLE">Your Core Capture URL</string>
    <string name="corecapture_URL_SUMMARY">Enter Your Core Capture URL</string>
    <string name="corecapture_settings">Core Capture Connection</string>
    <string name="corecapture_SUBSCRIPTION">Core Capture Subscription</string>
    <string name="corecapture_SUBSCRIPTION_TITLE">Your Core Capture Subscription</string>
    <string name="corecapture_SUBSCRIPTION_SUMMARY">Enter Your Core Capture Subscription Name</string>
    <string name="corecapture_CLIENT">Core Capture Client</string>
    <string name="corecapture_CLIENT_TITLE">Your Core Capture Client ID</string>
    <string name="corecapture_CLIENT_SUMMARY">Enter Your Core Capture Client ID</string>
    <string name="corecapture_SECRET">Core Capture Secret</string>
    <string name="corecapture_SECRET_TITLE">Your Core Capture Secret</string>
    <string name="corecapture_SECRET_SUMMARY">Enter Your Core Capture Secret</string>
    <string name="app_name">Core Capture Mobile</string>
    <string name="AppCopyright">Copyright 2013&#8211;2016 by EMC Corporation</string>
    <string name="MainPage_Title">EMC World Mobile</string>
    <string name="MainPage_TakePicture">Take Picture</string>
    <string name="MainPage_TakeContinuousPictures">Take Continuous Pictures</string>
    <string name="MainPage_EnhanceImage">Enhance Image</string>
    <string name="MainPage_Settings">Settings</string>
    <string name="EnhanceImage_Title">Enhance Image</string>
    <string name="EnhanceImageCrop_Title">Crop Image</string>
    <string name="EnhanceImageQuadCrop_Title">Quad Crop Image</string>
    <string name="ImageInfo_Title">Information</string>
    <string name="ImageInfo_DeviceID">Device ID:  </string>
    <string name="ImageInfo_Width">Image Width:  </string>
    <string name="ImageInfo_Height">Image Height:  </string>
    <string name="ImageInfo_Channels">Image Channels:  </string>
    <string name="ImageInfo_BitsPerPixel">Image Bits Per Pixel:  </string>
    <string name="ImageInfo_Version">Version:  </string>
    <string name="ImageInfo_Glare">Glare:  </string>
    <string name="ImageInfo_Quadrilateral">Quadrilateral:  </string>
    <string name="ImageInfo_Perspective">Perspective:  </string>
    <string name="ImageInfo_TotalQuality">Total Quality:  </string>
    <string name="ImageInfo_LastError">Last Error:  </string>
    <string name="General_Menu">Menu</string>
    <string name="General_NavPrev">&lt; Prev</string>
    <string name="General_NavNext">Next &gt;</string>
    <string name="General_Image">Image</string>
    <string name="General_Done">Done</string>
    <string name="General_Update">Update</string>
    <string name="Button_UndoAll">Undo All</string>
    <string name="Button_Undo">Undo Last</string>
    <string name="Undo_Error_Empty">Nothing left to undo.</string>
    <string name="Undo_Error_Disabled">Undo disabled.</string>
    <string name="Undo_Error_Generic">Undo failed.</string>
    <string name="Button_CropSubmit">Submit Crop</string>
    <string name="Menu_ImageLabel">Image Label</string>
    <string name="Menu_BlackWhite">Black-White</string>
    <string name="Menu_Gray">Gray</string>
    <string name="Menu_Deskew">Deskew</string>
    <string name="Menu_RotateLeft">Rotate Left</string>
    <string name="Menu_RotateRight">Rotate Right</string>
    <string name="Menu_Crop">Crop</string>
    <string name="Menu_QuadCrop">Quadrilateral Crop</string>
    <string name="Menu_AutoCrop">Auto Crop</string>
    <string name="Menu_Delete">Delete</string>
    <string name="Menu_GetInfo">Get Information</string>
    <string name="Menu_Lighter">Lighter</string>
    <string name="Menu_Darker">Darker</string>
    <string name="Menu_IncreaseContrast">Increase Contrast</string>
    <string name="Menu_DecreaseContrast">Decrease Contrast</string>
    <string name="Menu_RemoveNoise">Remove Noise</string>
    <string name="Menu_Resize">Resize</string>
    <string name="Menu_Rotate180">Rotate 180</string>
    <string name="Menu_DetectBarcodes">Detect Barcodes</string>
    <string name="Barcode_NotFound">No barcodes found</string>
    <string name="Barcode_Title">Barcodes</string>
    <string name="GPREF_CAPTURE_GROUP">GPREF_CAPTURE_GROUP</string>
    <string name="GPREF_CAPTURE_GROUP_TITLE">Capture Settings</string>
    <string name="GPREF_EDGELABEL">GPREF_EDGELABEL</string>
    <string name="GPREF_EDGELABEL_TITLE">Edge Label</string>
    <string name="GPREF_EDGELABEL_SUMMARY">Display text on the edge of the camera window.</string>
    <string name="GPREF_CENTERLABEL">GPREF_CENTERLABEL</string>
    <string name="GPREF_CENTERLABEL_TITLE">Center Label</string>
    <string name="GPREF_CENTERLABEL_SUMMARY">Display text in the center of the camera window.</string>
    <string name="GPREF_CAPTURINGLABEL">GPREF_CAPTURINGLABEL</string>
    <string name="GPREF_CAPTURINGLABEL_TITLE">Capturing Label</string>
    <string name="GPREF_CAPTURINGLABEL_SUMMARY">The text to display during the capturing phase.</string>
    <string name="GPREF_SENSOR_LIGHT">GPREF_SENSOR_LIGHT</string>
    <string name="GPREF_SENSOR_LIGHT_TITLE">Use Light Sensor</string>
    <string name="GPREF_SENSOR_LIGHT_SUMMARY">This will display the light sensor on the capture window (Default is true).</string>
    <string name="GPREF_SENSOR_LIGHT_VALUE">GPREF_SENSOR_LIGHT_VALUE</string>
    <string name="GPREF_SENSOR_LIGHT_VALUE_TITLE">Light Sensitivity</string>
    <string name="GPREF_SENSOR_LIGHT_VALUE_SUMMARY">The is the amount of light needed to satisfy the light sensor. Acceptable integer values are 0 (no light) to 5000 (very bright light). The default is 10.</string>
    <string name="GPREF_SENSOR_MOTION">GPREF_SENSOR_MOTION</string>
    <string name="GPREF_SENSOR_MOTION_TITLE">Use Motion Sensor</string>
    <string name="GPREF_SENSOR_MOTION_SUMMARY">This will display the motion sensor (shared with focus) on the capture window (Default is true).</string>
    <string name="GPREF_SENSOR_MOTION_VALUE">GPREF_SENSOR_MOTION_VALUE</string>
    <string name="GPREF_SENSOR_MOTION_VALUE_TITLE">Motion Sensitivity</string>
    <string name="GPREF_SENSOR_MOTION_VALUE_SUMMARY">This is the amount of motion needed to satisfy the motion sensor. Acceptable float values are 0.0 (absolutely no motion) to 10.0 (large motion allowed). The default is 0.30.</string>
    <string name="GPREF_SENSOR_FOCUS">GPREF_SENSOR_FOCUS</string>
    <string name="GPREF_SENSOR_FOCUS_TITLE">Use Focus Sensor</string>
    <string name="GPREF_SENSOR_FOCUS_SUMMARY">This will display the focus sensor (shared with motion) on the capture window (Default is true).</string>
    <string name="GPREF_SENSOR_QUALITY">GPREF_SENSOR_QUALITY</string>
    <string name="GPREF_SENSOR_QUALITY_TITLE">Use Quality Sensor</string>
    <string name="GPREF_SENSOR_QUALITY_SUMMARY">This will display the quality sensor on the capture window (Default is false). This setting should be enabled to use the quadrilateral overlay view during capture.</string>
    <string name="GPREF_GUIDELINES">GPREF_GUIDELINES</string>
    <string name="GPREF_GUIDELINES_TITLE">Display Guidelines</string>
    <string name="GPREF_GUIDELINES_SUMMARY">This will display the guidelines on the capture window.</string>
    <string name="GPREF_PICTURE_CROP">GPREF_PICTURE_CROP</string>
    <string name="GPREF_PICTURE_CROP_TITLE">Display Picture Crop Guidelines</string>
    <string name="GPREF_PICTURE_CROP_SUMMARY">This will display the picture crop guidelines on the capture window.</string>
    <string name="GPREF_PICTURE_CROP_COLOR">GPREF_PICTURE_CROP_COLOR</string>
    <string name="GPREF_PICTURE_CROP_COLOR_TITLE">Picture Crop Guidelines Color</string>
    <string name="GPREF_PICTURE_CROP_COLOR_SUMMARY">The color of the picture crop guidelines.</string>
    <string name="GPREF_PICTURE_CROP_WARNING_COLOR">GPREF_PICTURE_CROP_WARNING_COLOR</string>
    <string name="GPREF_PICTURE_CROP_WARNING_COLOR_TITLE">Picture Crop Guidelines Warning Color</string>
    <string name="GPREF_PICTURE_CROP_WARNING_COLOR_SUMMARY">The warning color of the picture crop guidelines.</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_WIDTH">GPREF_PICTURE_CROP_ASPECT_WIDTH</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_WIDTH_TITLE">Picture Crop Guidelines Aspect Width</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_WIDTH_SUMMARY">The width value for the picture crop guidelines aspect ratio.</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_HEIGHT">GPREF_PICTURE_CROP_ASPECT_HEIGHT</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_HEIGHT_TITLE">Picture Crop Guidelines Aspect Height</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_HEIGHT_SUMMARY">The height value for the picture crop guidelines aspect ratio.</string>
    <string name="GPREF_SENSOR_QUALITY_GLARE_VALUE">GPREF_SENSOR_QUALITY_GLARE_VALUE</string>
    <string name="GPREF_SENSOR_QUALITY_GLARE_TITLE">Glare Sensitivity</string>
    <string name="GPREF_SENSOR_QUALITY_GLARE_SUMMARY">The amount of glare that is allowed in the image. Values can be in the range 0 (all glare is allowed)–100 (no glare is allowed).</string>
    <string name="GPREF_SENSOR_QUALITY_PERSPECTIVE_VALUE">GPREF_SENSOR_QUALITY_PERSPECTIVE_VALUE</string>
    <string name="GPREF_SENSOR_QUALITY_PERSPECTIVE_TITLE">Perspective Sensitivity</string>
    <string name="GPREF_SENSOR_QUALITY_PERSPECTIVE_SUMMARY">The minimum required squareness for the corners of the detected quadrilateral in the image. Values can be in the range 0 (no quadrilateral required)–100 (the corners must be perfectly square).</string>
    <string name="GPREF_SENSOR_QUALITY_QUADRILATERAL_VALUE">GPREF_SENSOR_QUALITY_QUADRILATERAL_VALUE</string>
</resources>