<!-- 
* Copyright 2013-2016 EMC Corporation.  All rights reserved.
 -->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"	     
    tools:context=".MainActivity" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@android:color/black">
    
	<Button
	    android:id="@+id/takepicturebtn"
    	android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
	 	android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
	 	android:gravity="center_vertical"
	  	android:padding="10dp"
	  	android:drawableRight="@drawable/ic_next"
	  	android:background="@drawable/green_button"
	  	android:onClick="onTakePicture"
	  	android:textColor="#FFFFFF"
	  	android:textAppearance="?android:attr/textAppearanceMedium"
	  	android:text="@string/MainPage_TakePicture" />
    <Button
        android:id="@+id/takecontinuouspicturesbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/takepicturebtn"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:drawableRight="@drawable/ic_next"
        android:background="@drawable/green_button"
        android:onClick="onTakeContinuousPictures"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/MainPage_TakeContinuousPictures" />
    <Button
	    android:id="@+id/enhancepicturebtn"
    	android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
	 	android:layout_marginTop="5dp"
	 	android:layout_below="@id/takecontinuouspicturesbtn"
	 	android:gravity="center_vertical"
	  	android:padding="10dp"
	  	android:drawableRight="@drawable/ic_next"
	  	android:background="@drawable/green_button"
	  	android:onClick="onEnhanceImage"
	  	android:textColor="#FFFFFF"
	  	android:textAppearance="?android:attr/textAppearanceMedium"
	  	android:text="@string/MainPage_EnhanceImage" />	
	<Button
	    android:id="@+id/SettingsButton"
    	android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
	 	android:layout_marginTop="5dp"
	 	android:layout_below="@+id/enhancepicturebtn"
	 	android:gravity="center_vertical"
	  	android:padding="10dp"
	  	android:drawableRight="@drawable/ic_next"
	  	android:background="@drawable/green_button"
	  	android:onClick="onSettings"
	  	android:textColor="#FFFFFF"
	  	android:textAppearance="?android:attr/textAppearanceMedium"
	  	android:text="@string/MainPage_Settings" />	
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom ="true"
	    android:gravity="center_horizontal"
	    android:padding="2dp"
	    android:text="@string/AppCopyright"
	    android:textColor="#FFFFFF"
	    android:textStyle="bold" />

</RelativeLayout>
