<!-- 
* Copyright 2013-2016 EMC Corporation.  All rights reserved.
 -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EnhanceImageActivity"
    android:id="@+id/EnhanceLayout"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <emc.captiva.mobile.sdksampleapp.PZImageView
        android:id="@+id/ImageView"
        android:contentDescription="@string/General_Image"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:id="@+id/BottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:visibility="visible">
        <Button
                android:id="@+id/UndoAllButton"
                android:text="@string/Button_UndoAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/black_button"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible"
                android:onClick="onUndoAll" />
        <Button
                android:id="@+id/UndoButton"
                android:text="@string/Button_Undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/black_button"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible"
                android:onClick="onUndo" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/ProgressStatusBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
